--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <h1>Hello, my name is Nain Nolasco</h1>
   <p>I am learning about cloud computing and basic web development.</p>
   <p>One thing that makes this page unique is that I enjoy learning new technology and improving my skills.</p>
+
+  <p>Hello World!</p>
 </body>
 </html>
