--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Nain Nolasco</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - User System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Hello, my name is Nain Nolasco</h1>
-  <p>I am learning about cloud computing and basic web development.</p>
-  <p>One thing that makes this page unique is that I enjoy learning new technology and improving my skills.</p>
-
-  <p>Hello World!</p>
-  https://docs.google.com/document/d/1gQ2eFgDPn38AjhcJ0GumX9zfDsZYEhhd/edit?usp=sharing&ouid=104053161284706444944&rtpof=true&sd=true
+    <div class="container">
+        <div class="login-box">
+            <div class="logo">
+                <h1>🔐</h1>
+            </div>
+            <h2>Sign In</h2>
+            <form id="loginForm">
+                <div class="input-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                    <span class="icon">👤</span>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                    <span class="icon">🔒</span>
+                </div>
+                <button type="submit" class="btn-login">Sign In</button>
+            </form>
+            <div class="register-link">
+                <p>Don't have an account? <a href="register.html">Register here</a></p>
+            </div>
+        </div>
+    </div>
+    <script src="function.js"></script>
 </body>
 </html>
